# course_db

./: .gitignore  Readme.md  main.py  pyproject.toml
src/: base_hh_load_vacancies.py  config.py  database_connect.py  hh_load_vacancies.py
